fix(responsive): fix the left gap between content and edge

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,20 @@
 html {
   scroll-behavior: smooth;
+  min-width: 100%;
 }
 body {
   margin: 0;
-  background-color: #f1faee;
+  background-color: #111F41;
   font-family: 'Source Sans 3', sans-serif;
   font-family: 'Courier New', Courier, monospace;
-
+  color: #6bd6ea;
+  overflow-x: hidden;
 }
 
 /* Navbar Styling */
 .navbar {
   height: 100px;
-  background-color: #006d77;
+  background-color: #111F41;
   color: #e63946;
   display: flex;
   align-items: center;
@@ -38,10 +40,13 @@ body {
 .nav-links a {
   color: #f1faee;
   text-decoration: none;
+  margin: 12px;
+  font-weight: 600;
+  font-size: 24px;
 }
 
 .nav-links a:hover {
-  color: #29e5f7;
+  color: #b7f51e;
 }
 
 .contribute-nav {
@@ -59,12 +64,21 @@ body {
 
 
 /* hero section */
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+#devlab-hero {
+  margin-top: 150px;
+  margin-left: 150px;
+  font-weight: 700;
+  font-size: 100px;
+}
 .hero {
-  background-color: #086375;
-  padding-top: 10px;
   display: grid;
   place-content: center;
-  min-height: 100vh;
 }
 
 #animate-text {
@@ -75,7 +89,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   width: 30em;
-  animation: type 4s steps(60, end); 
+  /* animation: type 4s steps(60, end);  */
 }
 
 #animate-text :nth-child(2){
@@ -170,6 +184,7 @@ body {
 footer {
   height: 80px; /* Adjusted height for better responsiveness */
   background-color: #1d3557;
+  min-width: 100%;
 }
 
 /* the sections titles */
